Remote total restarts field
