# hack/python-sdk/swagger.json
@@ -287,16 +287,6 @@
         "terminalState": {
           "description": "terminalState tracks the state of the JobSet when it finishes execution. It can be either Completed or Failed. Otherwise, it is empty by default.",
           "type": "string"
-        },
-        "totalRestarts": {
-          "description": "totalRestarts tracks the number of times the JobSet has restarted in any way (e.g., this also counts restart actions such as RestartJob). This will be set to Restarts if not specified.",
-          "type": "integer",
-          "format": "int32"
-        },
-        "totalRestartsCountTowardsMax": {
-          "description": "totalRestartsCountTowardsMax tracks the number of times the JobSet has restarted in any way that counts towards the maximum allowed number of restarts (e.g., this also counts restart actions such as RestartJob). This will be set to RestartsCountTowardsMax if not specified.",
-          "type": "integer",
-          "format": "int32"
         }
       }
     },
